incubator/library/letsencrypt.service.yml
apiVersion: v1
kind: Service
metadata:
  name: drupal-letsencrypt
  labels:
    name: drupal-letsencrypt
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: drupal-letsencrypt








        dns: route53
      annotations:
        domainName: "vpn.goruha.dev.cloudposse.com"
